--- a/styles.scss
+++ b/styles.scss
@@ -5,7 +5,7 @@
 $font-family-sans-serif: 'Atkinson Hyperlegible',Atkinson+Hyperlegible
   FreeSerif, serif !default;
 
-$font-size-root: 18px !default;
+//$font-size-root: 18px !default;
 
 $white:    #fff !default;
 $black: black !default;
